tests/pos/i13106.java
final class A {
  public static final class C { }
  public static final class D {
    public static final class C { }
    public C foo() { return new C(); }
  }
}
