tests/neg/java-trait-access/A.java
package pkg;

class A {
  public void foo() {}
}
